--- a/sections/features-grid.liquid
+++ b/sections/features-grid.liquid
@@ -39,7 +39,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 2.5rem 2rem;
+    padding: 0;
     background-color: #ffffff;
     border: 1px solid rgba(0, 0, 0, 0.08);
     border-radius: 12px;
@@ -49,6 +49,28 @@
     justify-content: flex-start;
     opacity: 0;
     animation: fadeUp 0.8s ease-out forwards;
+    overflow: hidden;
+  }
+  
+  .feature-icon-wrapper {
+    flex: 1;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 2rem;
+    min-height: 50%;
+    background-color: rgba(0,0,0,0.02);
+  }
+
+  .feature-content {
+    flex: 1;
+    width: 100%;
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
   }
   
   .feature-item:nth-child(1) { animation-delay: 0.1s; }
@@ -74,9 +96,9 @@
   }
 
   .feature-icon {
-    width: 64px;
-    height: 64px;
-    margin-bottom: 1.5rem;
+    width: 80px;
+    height: 80px;
+    margin-bottom: 0;
     color: #2E8B57; /* SeaGreen */
     display: flex;
     align-items: center;
@@ -111,41 +133,45 @@
     <div class="features-grid__container">
       {%- for block in section.blocks -%}
         <div class="feature-item" {{ block.shopify_attributes }}>
-          <div class="feature-icon">
-            {%- if block.settings.custom_icon != blank -%}
-              {{ block.settings.custom_icon | image_url: width: 128 | image_tag: loading: 'lazy' }}
-            {%- else -%}
-              {%- case block.settings.icon -%}
-                {%- when 'sustainability' -%}
-                  <!-- Leaf Icon -->
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M20.893 13.393l-1.135-1.135a2.252 2.252 0 01-.421-.585l-1.08-2.16a.414.414 0 00-.663-.107.827.827 0 01-.812.21l-1.273-.318a2.267 2.267 0 01-1.243-1.064l-.529-1.058a.413.413 0 00-.602-.145 1.304 1.304 0 01-1.442-.106l-2.452-1.84A1.697 1.697 0 007.14 4.87 1.69 1.69 0 005.23 6.08l-.653 2.613a1.69 1.69 0 00.78 1.928l2.962 1.48c.27.136.586.213.889.213h.16c.212 0 .416-.059.607-.155.267-.135.523-.288.768-.456l.793-.555a.414.414 0 00.153-.483 1.68 1.68 0 01-.128-.643v-.233c0-.44.17-.86.474-1.165l.97-.97a.413.413 0 00.066-.461.83.83 0 01.066-.823l.254-.38c.253-.38.758-.49 1.139-.248l.436.276a.413.413 0 00.403.028l.386-.193a.413.413 0 00.144-.588l-.303-.454a.827.827 0 01.154-.966l.494-.494a.827.827 0 01.966-.154l.454.303a.413.413 0 00.588-.144l.193-.386a.413.413 0 00-.028-.403l-.276-.436a.827.827 0 01.248-1.139l.38-.254a.83.83 0 01.823-.066l.461.066a.413.413 0 00.461-.066l.97-.97a1.65 1.65 0 00.474-1.165v-.233a1.68 1.68 0 01.128-.643l.555-.793c.168-.245.321-.501.456-.768.096-.191.155-.395.155-.607v-.16a1.69 1.69 0 00-1.69-1.69h-3.23" />
-                  </svg>
-                {%- when 'affordability' -%}
-                  <!-- Dollar Icon -->
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                  </svg>
-                {%- when 'delivery' -%}
-                  <!-- Truck Icon -->
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
-                  </svg>
-                {%- when 'durability' -%}
-                  <!-- Shield Icon -->
-                  <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
-                  </svg>
-              {%- endcase -%}
-            {%- endif -%}
+          <div class="feature-icon-wrapper">
+            <div class="feature-icon">
+              {%- if block.settings.custom_icon != blank -%}
+                {{ block.settings.custom_icon | image_url: width: 128 | image_tag: loading: 'lazy' }}
+              {%- else -%}
+                {%- case block.settings.icon -%}
+                  {%- when 'sustainability' -%}
+                    <!-- Leaf Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M20.893 13.393l-1.135-1.135a2.252 2.252 0 01-.421-.585l-1.08-2.16a.414.414 0 00-.663-.107.827.827 0 01-.812.21l-1.273-.318a2.267 2.267 0 01-1.243-1.064l-.529-1.058a.413.413 0 00-.602-.145 1.304 1.304 0 01-1.442-.106l-2.452-1.84A1.697 1.697 0 007.14 4.87 1.69 1.69 0 005.23 6.08l-.653 2.613a1.69 1.69 0 00.78 1.928l2.962 1.48c.27.136.586.213.889.213h.16c.212 0 .416-.059.607-.155.267-.135.523-.288.768-.456l.793-.555a.414.414 0 00.153-.483 1.68 1.68 0 01-.128-.643v-.233c0-.44.17-.86.474-1.165l.97-.97a.413.413 0 00.066-.461.83.83 0 01.066-.823l.254-.38c.253-.38.758-.49 1.139-.248l.436.276a.413.413 0 00.403.028l.386-.193a.413.413 0 00.144-.588l-.303-.454a.827.827 0 01.154-.966l.494-.494a.827.827 0 01.966-.154l.454.303a.413.413 0 00.588-.144l.193-.386a.413.413 0 00-.028-.403l-.276-.436a.827.827 0 01.248-1.139l.38-.254a.83.83 0 01.823-.066l.461.066a.413.413 0 00.461-.066l.97-.97a1.65 1.65 0 00.474-1.165v-.233a1.68 1.68 0 01.128-.643l.555-.793c.168-.245.321-.501.456-.768.096-.191.155-.395.155-.607v-.16a1.69 1.69 0 00-1.69-1.69h-3.23" />
+                    </svg>
+                  {%- when 'affordability' -%}
+                    <!-- Dollar Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v12m-3-2.818l.879.659c1.171.879 3.07.879 4.242 0 1.172-.879 1.172-2.303 0-3.182C13.536 12.219 12.768 12 12 12c-.725 0-1.45-.22-2.003-.659-1.106-.879-1.106-2.303 0-3.182s2.9-.879 4.006 0l.415.33M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+                    </svg>
+                  {%- when 'delivery' -%}
+                    <!-- Truck Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M8.25 18.75a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h6m-9 0H3.375a1.125 1.125 0 01-1.125-1.125V14.25m17.25 4.5a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m3 0h1.125c.621 0 1.129-.504 1.09-1.124a17.902 17.902 0 00-3.213-9.193 2.056 2.056 0 00-1.58-.86H14.25M16.5 18.75h-2.25m0-11.177v-.958c0-.568-.422-1.048-.987-1.106a48.554 48.554 0 00-10.026 0 1.106 1.106 0 00-.987 1.106v7.635m12-6.677v6.677m0 4.5v-4.5m0 0h-12" />
+                    </svg>
+                  {%- when 'durability' -%}
+                    <!-- Shield Icon -->
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M9 12.75L11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 01-1.043 3.296 3.745 3.745 0 01-3.296 1.043A3.745 3.745 0 0112 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 01-3.296-1.043 3.745 3.745 0 01-1.043-3.296A3.745 3.745 0 013 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 011.043-3.296 3.746 3.746 0 013.296-1.043A3.746 3.746 0 0112 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 013.296 1.043 3.746 3.746 0 011.043 3.296A3.745 3.745 0 0121 12z" />
+                    </svg>
+                {%- endcase -%}
+              {%- endif -%}
+            </div>
           </div>
-          {%- assign heading_tag = block.settings.heading_tag | default: 'h3' -%}
-          <{{ heading_tag }} class="feature-heading" style="font-size: {{ block.settings.heading_size }}px; color: {{ block.settings.heading_color }};">
-            {{ block.settings.heading }}
-          </{{ heading_tag }}>
-          <p class="feature-text" style="font-size: {{ block.settings.text_size }}px; color: {{ block.settings.text_color }}; text-align: {{ block.settings.text_alignment }};">
-            {{ block.settings.text }}
-          </p>
+          <div class="feature-content">
+            {%- assign heading_tag = block.settings.heading_tag | default: 'h3' -%}
+            <{{ heading_tag }} class="feature-heading" style="font-size: {{ block.settings.heading_size }}px; color: {{ block.settings.heading_color }};">
+              {{ block.settings.heading }}
+            </{{ heading_tag }}>
+            <p class="feature-text" style="font-size: {{ block.settings.text_size }}px; color: {{ block.settings.text_color }}; text-align: {{ block.settings.text_alignment }};">
+              {{ block.settings.text }}
+            </p>
+          </div>
         </div>
       {%- endfor -%}
     </div>
